tests/ui/diagnostic_namespace/on_type_error/on-type-error-invalid-placeholders.stderr
warning: unknown parameter `Expected`
  --> $DIR/on-type-error-invalid-placeholders.rs:2:64
   |
LL | #[diagnostic::on_move(message = "Foo", label = "Bar", note = "{Expected} {Found}")]
   |                                                                ^^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument
   = note: `#[warn(malformed_diagnostic_format_literals)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

warning: unknown parameter `Found`
  --> $DIR/on-type-error-invalid-placeholders.rs:2:75
   |
LL | #[diagnostic::on_move(message = "Foo", label = "Bar", note = "{Expected} {Found}")]
   |                                                                           ^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

error[E0382]: Foo
  --> $DIR/on-type-error-invalid-placeholders.rs:11:15
   |
LL |     let foo = Foo;
   |         --- Bar
LL |     takes_foo(foo);
   |               --- value moved here
LL |     let bar = foo;
   |               ^^^ value used here after move
   |
   = note: {Expected} {Found}
note: consider changing this parameter type in function `takes_foo` to borrow instead if owning the value isn't necessary
  --> $DIR/on-type-error-invalid-placeholders.rs:7:17
   |
LL | fn takes_foo(_: Foo) {}
   |    ---------    ^^^ this parameter takes ownership of the value
   |    |
   |    in this function
note: if `Foo` implemented `Clone`, you could clone the value
  --> $DIR/on-type-error-invalid-placeholders.rs:6:1
   |
LL | struct Foo;
   | ^^^^^^^^^^ consider implementing `Clone` for this type
...
LL |     takes_foo(foo);
   |               --- you could clone this value

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0382`.
